Order logic and DAL ready

--- a/Ordermanager/View/Views/Orders/Index.cshtml
+++ b/Ordermanager/View/Views/Orders/Index.cshtml
@@ -56,8 +56,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {  id=item.OrderNr }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.OrderNr  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.OrderNr  })
+                @Html.ActionLink("Details", "Details", new {  id=item.OrderNr  })
             </td>
         </tr>
 }
