--- a/Ordermanager/View/Views/Shared/_Layout.cshtml
+++ b/Ordermanager/View/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">All orders</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Status">Statussen</a>
                         </li>
                     </ul>
                 </div>
