--- a/Ordermanager/View/Views/Orders/Create.cshtml
+++ b/Ordermanager/View/Views/Orders/Create.cshtml
@@ -39,7 +39,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control"/>
+                <select asp-for="Status" class="form-control">
+                    <option value="1">WachtenOpOnderdelen</option>
+                    <option value="2">KlaarVoorProductie</option>
+                    <option value="3">InProductie</option>
+                    <option value="4">KlaarVoorLevering</option>
+                    <option value="5">Geleverd</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
