--- a/Ordermanager/View/Views/Orders/Edit.cshtml
+++ b/Ordermanager/View/Views/Orders/Edit.cshtml
@@ -14,12 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" va/>
+                <input asp-for="Id" class="form-control" disabled="disabled"/>
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value="1">WachtenOpOnderdelen</option>
+                    <option value="2">KlaarVoorProductie</option>
+                    <option value="3">InProductie</option>
+                    <option value="4">KlaarVoorLevering</option>
+                    <option value="5">Geleverd</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
