--- a/Ordermanager/View/Views/Orders/Create.cshtml
+++ b/Ordermanager/View/Views/Orders/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ordermanager_Logic.Dto.CreateDto
+﻿@model OrderCreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -39,12 +39,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control">
-                    <option value="1">WachtenOpOnderdelen</option>
-                    <option value="2">KlaarVoorProductie</option>
-                    <option value="3">InProductie</option>
-                    <option value="4">KlaarVoorLevering</option>
-                    <option value="5">Geleverd</option>
+                <select asp-for="Status" class="form-control" asp-items="@(Html.GetEnumSelectList<Ordermanager_Logic.Status>())">
+                    <option selected="selected" value="">Please select</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
