--- a/Ordermanager/View/Views/Orders/Details.cshtml
+++ b/Ordermanager/View/Views/Orders/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Product)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductPrice)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProductPrice)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.OrderDate)
         </dt>
         <dd class = "col-sm-10">
@@ -41,6 +47,12 @@
             @Html.DisplayFor(model => model.Customer)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerAdress)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CustomerAdress)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
@@ -49,6 +61,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.OrderNr}) |
-    <a asp-action="Index">Back to List</a>
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.OrderNr }) |
+    <a asp-action="Index">Back to all orders</a>
 </div>
