--- a/Ordermanager/View/Views/Orders/Edit.cshtml
+++ b/Ordermanager/View/Views/Orders/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Ordermanager_Logic.Dto.UpdateDto
+﻿@model OrderUpdateModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -19,12 +19,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control">
-                    <option value="1">WachtenOpOnderdelen</option>
-                    <option value="2">KlaarVoorProductie</option>
-                    <option value="3">InProductie</option>
-                    <option value="4">KlaarVoorLevering</option>
-                    <option value="5">Geleverd</option>
+                <select asp-for="Status" class="form-control" asp-items="@(Html.GetEnumSelectList<Ordermanager_Logic.Status>())">
+                    <option selected="selected" value="">Please select</option>
                 </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
@@ -36,7 +32,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to all Orders</a>
 </div>
 
 @section Scripts {
