--- a/Ordermanager/View/Views/Orders/Status.cshtml
+++ b/Ordermanager/View/Views/Orders/Status.cshtml
@@ -59,6 +59,9 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {  id=item.OrderNr })
+                </td>
             </tr>
         }
     </tbody>
