--- a/Ordermanager/View/Views/Orders/Create.cshtml
+++ b/Ordermanager/View/Views/Orders/Create.cshtml
@@ -19,7 +19,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Product" class="control-label"></label>
-                <input asp-for="Product" class="form-control"/>
+                <select asp-for="Product" class="form-control">
+                    <option selected="selected" value="">Please select</option>
+                    @foreach (var product in Model.products)
+                    {
+                        <option value="@product.Id">@product.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="Product" class="text-danger"></span>
             </div>
             <div class="form-group">
