--- a/Ordermanager/View/Views/Orders/Create.cshtml
+++ b/Ordermanager/View/Views/Orders/Create.cshtml
@@ -13,11 +13,6 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="OrderNr" class="control-label"></label>
-                <input asp-for="OrderNr" class="form-control"/>
-                <span asp-validation-for="OrderNr" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Product" class="control-label"></label>
                 <select asp-for="Product" class="form-control">
                     <option selected="selected" value="">Please select</option>
@@ -40,7 +35,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Customer" class="control-label"></label>
-                <input asp-for="Customer" class="form-control"/>
+                <select asp-for="Customer" class="form-control">
+                    <option selected="selected" value="">Please select</option>
+                    @foreach (var customer in Model.Customers)
+                    {
+                        <option value="@customer.Id">@customer.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="Customer" class="text-danger"></span>
             </div>
             <div class="form-group">
