--- a/Ordermanager/View/Views/Shared/_Layout.cshtml
+++ b/Ordermanager/View/Views/Shared/_Layout.cshtml
@@ -22,10 +22,13 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">All orders</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Status">Statussen</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Status" asp-route-id="1">Statussen</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customers</a>
                     </li>
                 </ul>
             </div>
