--- a/Ordermanager/View/Views/Orders/Details.cshtml
+++ b/Ordermanager/View/Views/Orders/Details.cshtml
@@ -29,6 +29,12 @@
             @Html.DisplayFor(model => model.ProductPrice)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Amount)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Amount)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.OrderDate)
         </dt>
         <dd class = "col-sm-10">
