--- a/Ordermanager/View/Views/Orders/Index.cshtml
+++ b/Ordermanager/View/Views/Orders/Index.cshtml
@@ -19,6 +19,9 @@
                 @Html.DisplayNameFor(model => model.Product)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Amount)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.OrderDate)
             </th>
             <th>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Product)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Amount)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OrderDate)
