--- a/Ordermanager/View/Views/Product/Edit.cshtml
+++ b/Ordermanager/View/Views/Product/Edit.cshtml
@@ -21,6 +21,7 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
+                @ViewBag.message
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
