--- a/Ordermanager/View/Views/Product/Create.cshtml
+++ b/Ordermanager/View/Views/Product/Create.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" value="0,00" />
                 <span asp-validation-for="Price" class="text-danger"></span>
                 @ViewBag.message
             </div>
