--- a/Ordermanager/View/Views/Customer/Create.cshtml
+++ b/Ordermanager/View/Views/Customer/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create New Customer</h1>
 
-<h4>CustomerCreateModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
