--- a/Ordermanager/View/Views/Customer/Edit.cshtml
+++ b/Ordermanager/View/Views/Customer/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Customer</h1>
 
-<h4>CustomerUpdateModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
