--- a/Ordermanager/View/Views/Orders/Edit.cshtml
+++ b/Ordermanager/View/Views/Orders/Edit.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>UpdateDto</h4>
+<h1>Edit Order</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
